Prepping bulk transfer function

--- a/test.pio/basic/platformio.ini
+++ b/test.pio/basic/platformio.ini
@@ -1,4 +1,8 @@
+[common]
+build_flags = -std=gnu++11
+
 [env:stm]
+build_flags = ${common.build_flags}
 platform = ststm32
 framework = mbed
 board = nucleo_f303k8
