--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,6 @@
 *.dylib
 *.dll
 
-# Fortran module files
-*.mod
-*.smod
-
 # Compiled Static libraries
 *.lai
 *.la
@@ -27,3 +23,8 @@
 *.exe
 *.out
 *.app
+
+**/.idea/workspace.xml
+**/.idea/tasks.xml
+
+cmake-build-*
